Allow configuring redis using .env

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ KNOWLEDGE_MINING_CONCURRENCY=20
 OPENAI_API_KEY=
 UNSTRUCTURED_API_URL=
 UNSTRUCTURED_API_URL=
+
+REDIS_PORT=6379
+REDIS_HOST=127.0.0.1
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_DB=0
