Add open-telemetry support

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,14 @@ KNOWLEDGE_MINING_CONCURRENCY=20
 
 OPENAI_API_KEY=
 UNSTRUCTURED_API_URL=
-UNSTRUCTURED_API_URL=
 
 ROUTES_PREFIX=/
+
+REDIS_PORT=6379
+REDIS_HOST=127.0.0.1
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_DB=0
+
+OTEL_ENABLED=false
+OTEL_SERVICE_NAME="edge-node-knowledge-mining"
